ExtractFix_dataset/docker/libtiff/testcases/cve_2016_3623/ubsan.txt
TIFFScanlineSize64: Invalid YCbCr subsampling.
/dataset/repos/libtiff/tools/rgb2ycbcr.c:257:19: runtime error: division by zero
